<resources>
    <string name="app_name" translatable="false">LangBot</string>
    <string name="submit_button_text">Submit</string>
    <string name="message_to_send">Message</string>
    <string name="message_size_default_text" translatable="false">0/550</string>
    <string name="sendbuttontext">Send button</string>
    <string name="microphonebuttontext">Use microphone button</string>
    <string name="choose_languages">Choose languages</string>
    <string name="help">Help</string>
    <string name="language_to_learn">Language to learn</string>
    <string name="native_language">Native language</string>
    <string name="parameters">Parameters</string>
    <string name="erase_current_conversation">Erase current conversation</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="message_size" translatable="false">%1$d/550</string>
    <string name="language_to_learn_subtitle">Select the language that you want to learn</string>
    <string name="nativelanguage_subtitle">Select your native language</string>
    <string name="tutorial">Tutorial</string>
    <string name="about">About</string>
    <string name="title_privacy_policy">Privacy policy</string>
    <string name="title_permissions">Permissions</string>
    <string name="text_application_logo">Application logo</string>
    <string name="title_opensource_libraries">Open-source libraries</string>
    <string name="title_about_me">About me</string>
    <string name="description_privacy_policy">This application is free and does not contain any advertisement. Therefore, <b>the only data that it (LangBot) collects is the current IP address provided when the user (you) sends a message.</b> This information is stored purely for security purposes. Although this data isn't shared with any third party advertiser (because there is none!), note that it (the user's IP address) is stored on Amazon's AWS service, therefore AWS's privacy policy may apply concerning this data. &#xA;&#xA;The service provided by LangBot uses Amazon's AWS service to store the user's IP address and OpenAI's ChatGPT Api to send the user's message to the Large Language Model, as well as Deepl and Reverso's APIs to translate/spell check the user's message. Therefore, <b>their privacy policy may apply when sending a message</b> using this application (LangBot).</string>
    <string name="description_permission_internet">This permission is necessary to send the message to the AWS server and get a response (which is the whole purpose of this app…).</string>
    <string name="title_permission_internet">Complete Internet Access</string>
    <string name="description_about_me">This application has been created and is maintained up to date by Hugo Pothieux (me :)) as a side project to try and facilitate training when learning a new language. &#xA;&#xA;<b>Contact me</b>&#xA; If you have any question, suggestion or if you found a bug, you can contact me via this email address.</string>
    <string name="description_opensource_libraries">    implementation("androidx.datastore:datastore-preferences:1.0.0") 
     implementation("androidx.core:core-ktx:1.12.0") 
     implementation("androidx.appcompat:appcompat:1.6.1") 
     implementation("com.google.android.material:material:1.9.0") 
     implementation("androidx.constraintlayout:constraintlayout:2.1.4") 
     implementation("com.aallam.openai:openai-client:3.3.0") 
     implementation("io.ktor:ktor-client-android:2.3.3") 
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.7.0-alpha02") 
     implementation("com.squareup.okhttp3:okhttp:4.11.0") 
     testImplementation("junit:junit:4.13.2") 
     androidTestImplementation("androidx.test.ext:junit:1.1.5") 
     androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")</string>
</resources>