<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/appbar_layout">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:title="@string/app_name"
                    android:background="@android:color/transparent"
                    android:elevation="0dp" />

            </com.google.android.material.appbar.AppBarLayout>

            <ScrollView
                android:id="@+id/scroll_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="16dp"

                app:layout_constraintBottom_toTopOf="@id/cardview2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appbar_layout"
                tools:ignore="SpeakableTextPresentCheck">

                <GridLayout
                    android:id="@+id/grid_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="1">

                </GridLayout>

            </ScrollView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:cardBackgroundColor="@color/assistantmessagecolor"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="6dp">

                    <EditText
                        android:id="@+id/message_edit_text"
                        android:layout_width="275dp"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@id/submit_message_button"
                        android:hint="@string/message_to_send"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:maxLength="550"
                        android:maxLines="5"
                        android:minHeight="48dp"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/submit_message_button"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/message_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/message_size_default_text"

                        app:layout_constraintEnd_toEndOf="@id/message_edit_text"
                        app:layout_constraintTop_toTopOf="@id/message_edit_text"/>

                    <ImageButton
                        android:id="@+id/submit_message_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:backgroundTint="@color/assistantmessagecolor"
                        android:src="@drawable/bluesend"
                        android:contentDescription="@string/sendbuttontext"

                        app:layout_constraintBottom_toBottomOf="@id/message_edit_text"
                        app:layout_constraintStart_toEndOf="@id/message_edit_text"
                        tools:ignore="ImageContrastCheck"/>

                    <ImageButton
                        android:id="@+id/microphone_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:backgroundTint="@color/assistantmessagecolor"
                        android:src="@drawable/bluemic"
                        android:contentDescription="@string/microphonebuttontext"

                        app:layout_constraintBottom_toBottomOf="@id/message_edit_text"
                        app:layout_constraintStart_toEndOf="@id/message_edit_text"
                        tools:ignore="ImageContrastCheck"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"

        app:menu="@menu/option_menu" />

</androidx.drawerlayout.widget.DrawerLayout>